--- a/css/index.css
+++ b/css/index.css
@@ -75,14 +75,21 @@ p {
     /* background-color: pink; */
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
     margin: 20px 0px;
+    align-items: flex-end;
+    padding: 10px
 }
 
 .navbar a {
     text-decoration: none;
     color: black;
+    font-size: 14px;
 }
+
+.jumbo-image {
+    margin: 10px 0px 20px 20px; 
+}
+
 
 .top-content {
     display: flex;
