--- a/css/index.css
+++ b/css/index.css
@@ -187,6 +187,7 @@ footer nav a {
 
 .middle-content-about-row {
     display:flex;
+    justify-content: space-around;
 }
 
 .middle-content-about-box {
