--- a/css/index.css
+++ b/css/index.css
@@ -77,13 +77,18 @@ p {
     justify-content: space-between;
     margin: 20px 0px;
     align-items: flex-end;
-    padding: 10px
+    padding: 10px 40px 10px 0px;
 }
 
 .navbar a {
     text-decoration: none;
     color: black;
     font-size: 14px;
+}
+
+.navbar a:hover {
+    color: red;
+    font-size: 20px;
 }
 
 .jumbo-image {
