--- a/css/index.css
+++ b/css/index.css
@@ -88,7 +88,8 @@ nav a {
 
 nav a:hover {
     color: crimson;
-    font-size: 20px;
+    transform: scale(1.4);
+    transition: all ease 500ms;
 }
 
 .jumbo-image {
@@ -235,8 +236,44 @@ footer nav a {
     display: flex;
     align-items: center; 
     text-align: center;
-    width: 200px;
+    justify-content: center;
+    width: 600px;
     height: 100px;
     background-color: crimson;
     color: whitesmoke;
+    line-height: 1.5;
+    padding: 20px 20px 0px 20px; 
 }
+
+.contact-arrow img{
+    width:60px;
+    height: 60px;
+}
+
+.contact-form {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    width: 600px;
+    padding: 20px;
+    border: 1.5px dashed black;
+}
+
+  form input, textarea {
+      margin: 10px;
+      width: 200px;
+      border: 1px solid black;
+  }
+ 
+  #submit {
+      padding: 20px;
+      font-size: 20px;
+      background-color: black;
+      color: whitesmoke;
+      cursor: pointer;
+  }
+
+  #submit:hover {
+    transform: scale(1.1);
+    transition: all ease 500ms;
+  }
